--- a/README.me
+++ b/README.me
@@ -1,12 +1,13 @@
 Topic: Front End Task Project
 Team: Code For Najaf
-By: Muhammad Hasan Alasady
+AUTHORS: Muhammad Hasan Alasady
 Email: muhmdhsn313@gmail.com
+LICENSE: Open Source
 
 ---#Describtion--------------------------
--> This is a task project for code for Iraq!
--> It has a five page, for home, JavaScript Projects, HTML CSS Projects, BackEnd Projects and About Us!
------------------------------------------
-
-Thank you for read it!
-Muhammad Hasan Alasady								
+##Branch Of The Site:##
+    1- Home Page
+    2- About Us Page
+    3- Our Projects Page
+    4- Share Idea Page
+    5- Join Us page 
